--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.23
-python-dotenv==0.19.0
-requests==2.26.0
-Pillow==9.5.0
+Flask==2.3.3
+Werkzeug==2.3.7
+Flask-SQLAlchemy==3.0.5
+SQLAlchemy==2.0.20
+python-dotenv==1.0.0
+requests==2.31.0
+Pillow==10.0.0
 numpy==1.24.3
 scikit-learn==1.3.0
 pandas==2.0.3
-gunicorn==20.1.0
-psycopg2-binary==2.9.1
+gunicorn==21.2.0
+psycopg2-binary==2.9.7
